--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.4",
     "typescript": "~5.8.3"
   },
   "private": true
