--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "expo": "^54.0.1",
     "expo-blur": "~15.0.6",
     "expo-constants": "~18.0.8",
-    "expo-dev-client": "~6.0.11",
     "expo-font": "~14.0.7",
     "expo-haptics": "~15.0.6",
     "expo-image": "~3.0.7",
@@ -41,15 +40,20 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "13.15.0"
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
+    "expo-dev-client": "~6.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "^19.1.12",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
+    "eslint-config-expo": "~10.0.0",
     "json-server": "^0.17.4",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "expo-dev-menu": "7.0.10"
   },
   "private": true
 }
