--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "^54.0.1",
     "expo-blur": "~15.0.6",
     "expo-constants": "~18.0.8",
+    "expo-dev-client": "~6.0.11",
     "expo-font": "~14.0.7",
     "expo-haptics": "~15.0.6",
     "expo-image": "~3.0.7",
@@ -39,10 +40,10 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1",
-    "expo-dev-client": "~6.0.11"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
